Débuts de contrôles
petit labo, avec le perso GreyBox : marche, orientation de caméra, saut, course

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,3 +10,9 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/EllisDuty_Ars_Save")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/EllisDuty_Ars_Save")
 
+[/Script/EngineSettings.GameMapsSettings]
+GlobalDefaultGameMode=/Game/BluePrints/MyGameMode.MyGameMode_C
+
+[/Script/LuminRuntimeSettings.LuminRuntimeSettings]
+IconModelPath=(Path="")
+
