--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -95,6 +95,10 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="UpAndDown",Scale=1.000000,Key=MouseY)
 +AxisMappings=(AxisName="TurnAround",Scale=1.000000,Key=Gamepad_RightX)
 +AxisMappings=(AxisName="UpAndDown",Scale=1.000000,Key=Gamepad_RightY)
++AxisMappings=(AxisName="Vertical",Scale=1.000000,Key=Up)
++AxisMappings=(AxisName="Vertical",Scale=-1.000000,Key=Down)
++AxisMappings=(AxisName="Horizontal",Scale=1.000000,Key=Right)
++AxisMappings=(AxisName="Horizontal",Scale=-1.000000,Key=Left)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
