test lumiere sur la scene 2

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -16,3 +16,6 @@ GlobalDefaultGameMode=/Game/BluePrints/MyGameMode.MyGameMode_C
 [/Script/LuminRuntimeSettings.LuminRuntimeSettings]
 IconModelPath=(Path="")
 
+[/Script/Engine.RendererSettings]
+r.GenerateMeshDistanceFields=True
+
