--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,7 +12,12 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/BluePrints/MyGameMode.MyGameMode_C
+EditorStartupMap=/Game/Maps/MainMenuLevel.MainMenuLevel
+GameDefaultMap=/Game/Maps/MainMenuLevel.MainMenuLevel
+TransitionMap=/Game/Maps/Patoune.Patoune
+bUseSplitscreen=False
 
 [/Script/LuminRuntimeSettings.LuminRuntimeSettings]
 IconModelPath=(Path="")
+IconPortalPath=(Path="")
 
