--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,3 +2,5 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=4CCDDC234338C7AAB13438A555DBBCD1
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "7B26D79C4399D32F30CE0C856F078E08", "EllisDuty0.0.1")
+
