--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -21,3 +21,6 @@ bUseSplitscreen=False
 IconModelPath=(Path="")
 IconPortalPath=(Path="")
 
+[/Script/Engine.RendererSettings]
+r.GenerateMeshDistanceFields=True
+
