les ajustement pour la build de secours

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -14,7 +14,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 GlobalDefaultGameMode=/Game/BluePrints/MyGameMode.MyGameMode_C
 EditorStartupMap=/Game/Maps/MainMenuLevel.MainMenuLevel
 GameDefaultMap=/Game/Maps/MainMenuLevel.MainMenuLevel
-TransitionMap=/Game/Maps/Patoune.Patoune
+TransitionMap=/Game/Maps/Patoune1.Patoune1
 bUseSplitscreen=False
 
 [/Script/LuminRuntimeSettings.LuminRuntimeSettings]
